--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,26 +1,29 @@
-<div class="header-bar d-flex justify-content-between">
+<div class="header-bar d-flex justify-content-between align-items-center">
 
-  <div class="float-left ">
+  <div class="d-flex  align-items-center">
     <img src="./assets/icons/search.svg" class="icon search ">
     <input type="text" placeholder="Search" class="">
   </div>
 
-  <div class="right d-flex ">
-    <div class="caret-item d-flex align-items-baseline">
-
+  <div class="right d-flex align-items-center  h-100 ">
+    <div class="caret-item d-flex align-items-center h-100">
       <p class="language">ENG</p>
       <img src="./assets/icons/caret.svg" class="icon caret ">
+      <img src="./assets/icons/chat.svg" class="icon-small">
+      <span class="dot red"></span>
+      <img src="./assets/icons/bell.svg" class="icon-small">
+      <span class="dot green"></span>
     </div>
-    <img src="./assets/icons/chat.svg" class="icon-small">
-    <span class="dot red"></span>
-    <img src="./assets/icons/bell.svg" class="icon-small">
-    <span class="dot green"></span>
 
-    <img src="./assets/icons/profile-2.jpg" alt="profile " class="profile">
-    <div class="caret-item d-flex align-items-baseline">
+
+    <div class="d-flex">
+
+      <img src="./assets/icons/profile-2.jpg" alt="profile " class="profile">
+      <!-- <div class="caret-item d-flex align-items-baseline"> -->
 
       <p class="user ">Camilie Stevenson</p>
       <img src="./assets/icons/caret.svg" class="icon caret ">
+      <!-- </div> -->
     </div>
 
 
