--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,28 +1,51 @@
 @import './../../../styles.scss';
 
 .header-bar {
-  height: 10vh;
-  width: 95vw;
+  height: 7.6vh;
+  width: 100%;
   background-color: $base-white;
-  margin-left: 5%;
+  position: sticky;
+  top: 0;
 
-  padding: 2rem;
+  div:first-child {
+    margin-left: 3%;
+  }
+
+  div:nth-child(2) {
+    p {
+      margin: 0;
+      font-size: 0.7rem;
+      margin-right: 0.5rem;
+
+    }
+
+    .caret {
+      margin-right: 0.7rem;
+    }
+  }
 
   .icon.search {
     width: 1.1rem;
-    margin-left: 1.8rem;
     margin-right: 1rem;
   }
 
   input {
     border-width: 0;
+    width: 30rem;
+    height: 1.7rem;
+
+    &:focus-visible {
+      outline-color: $header-blue;
+    }
   }
 
   .right {
+
     .profile {
       width: 2rem;
       height: 2rem;
       margin: 0 0.5rem 0 0.5rem;
+      border-radius: 0.2rem;
     }
 
     .icon-small {
@@ -37,27 +60,24 @@
       margin-right: 0.5rem;
 
       &.green {
-
         background-color: green;
+        transform: translate(-0.4rem, -0.6rem);
       }
 
       &.red {
-
         background-color: red;
+        transform: translateY(-0.6rem);
       }
     }
 
 
 
 
-    .caret-item {
-      gap: 0.5rem;
-      margin-right: 1rem;
 
-      .caret {
-        width: 11px;
-        filter: opacity(0.3);
-      }
+
+    .caret {
+      width: 11px;
+      filter: opacity(0.3);
     }
   }
 }
