--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <input type="text" placeholder="Search" class="">
   </div>
 
-  <div class="right d-flex align-items-center  h-100 ">
+  <div class="right d-flex align-items-center mr-4 h-100 ">
     <div class="caret-item d-flex align-items-center h-100">
       <p class="language">ENG</p>
       <img src="./assets/icons/caret.svg" class="icon caret ">
