--- a/src/app/components/left-nav/left-nav.component.html
+++ b/src/app/components/left-nav/left-nav.component.html
@@ -1,7 +1,7 @@
 <div class="left-nav">
   <ul class="menu-list ">
 
-    <li class="hamburger">
+    <li class="hamburger mb-4">
       <img src="./assets/icons/ham.svg" class="icon">
     </li>
     <li class="sidenav-item">
