--- a/src/app/components/top-cards/top-cards.component.html
+++ b/src/app/components/top-cards/top-cards.component.html
@@ -1,6 +1,6 @@
 <div class="holder d-flex h-100 w-100 d-flex">
 
-  <div *ngFor="let item of cardData;let i = index;first as isFirst" [ngClass]="{'first':isFirst,'normal':!isFirst}" class="top-card">
+  <div *ngFor="let item of cardData;let i = index;first as isFirst" [ngClass]="{'first':isFirst,'normal':!isFirst}" class="top-card p-4">
 
    <div class="card-head-row d-flex justify-content-between w-100">
      <h2 class="card-head-row-headline" >
