--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -1,2 +1,20 @@
 $base-white:#ffffff;
-$header-blue:#4a69e1;
+$base-blue:#4a69e1;
+
+
+$green:#30ce75;
+$grey:#7883a3;
+$red:#eb556a;
+
+$btn-grey:#eff3fa;
+$btn-text-grey:#c5cad4;
+$status-blue:#4f6fe3;
+$status-green:#17d120;
+
+$excellent:#fff022;
+$best-blue:#4564e1;
+$above-average-magenta:#ba3bec;
+$average-green:#20ca93;
+$less-average-black:#5a6374;
+$low-orange:#fec100;
+$very-low-red:#f6661f;
