--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -3,3 +3,18 @@
   width: 1.6rem;
 
 }
+
+.font-nunito{
+  font-family: 'Nunito', sans-serif;
+
+}
+
+.font-instrument-san{
+  font-family: 'Instrument Sans', sans-serif;
+}
+
+
+%dashboard-card {
+  background-color: $base-white;
+  border-radius: 4px;
+}
