--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,8 @@
 // 8. Add additional custom code here
 
 @import './assets/colors.scss';
+
+@import './assets/fonts';
 @import './assets/common.scss';
 body{
   height: 100vh;
