--- a/src/app/components/top-cards/top-cards.component.scss
+++ b/src/app/components/top-cards/top-cards.component.scss
@@ -1,26 +1,32 @@
+@import './../../../styles.scss';
+
 .holder {
   gap: 1rem;
 
 
   .first {
-    color: white;
-    background-color: #506de2;
-    .head-icon{
-      filter:invert(1);
+    color: $base-white;
+    background-color: $base-blue;
+    .head-icon {
+      filter: invert(1);
       opacity: 0.4;
     }
   }
 
   .normal {
-    background-color: white;
+    @extend %dashboard-card;
+
 
     h2 {
       color: #506de2
     }
-    h3,h4{
-      color:#717586;
+
+    h3,
+    h4 {
+      color: #717586;
     }
-    .head-icon{
+
+    .head-icon {
       opacity: 0.2;
     }
   }
@@ -28,31 +34,35 @@
   .top-card {
     height: 100%;
     flex-basis: 25%;
-    border-radius: 4px;
-    padding: 1.4rem;
-    // color: white;
+    border-radius:4px;
 
 
     .card {
       &-head-row {
 
         &-headline {
-          font-family: 'AwanZaman Medium';
-          font-size: 3.5rem;
+          font-size: 2.1rem;
+          font-weight: 600;
+        @extend .font-nunito;
+
         }
 
         .head-icon {
-          width: 3rem;
+          width: 2.8rem;
         }
       }
 
       &-main-header {
-        font-size: 1.5rem;
-        // font-family: 'AwanZaman Medium';
+        font-size: 1.3rem;
+        font-weight: 600;
+        @extend .font-nunito;
+
       }
 
       &-description {
-        font-size: 1rem;
+        font-size: 0.8rem;
+        opacity: 0.9;
+        @extend .font-instrument-san;
       }
     }
   }
