--- a/src/app/components/dashboard-charts/dashboard-charts.component.html
+++ b/src/app/components/dashboard-charts/dashboard-charts.component.html
@@ -1,15 +1,13 @@
-<div class="holder w-100 h-100 d-flex ">
-  <div class="graph-holder-1 d-column p-1">
+<div class="holder w-100  d-flex ">
+  <div class="graph-holder-1 p-4">
     <h4>New User Registrations</h4>
 
-    <div id="chart">
       <apx-chart [series]="areaChartOptions.series!" [chart]="areaChartOptions.chart!" [xaxis]="areaChartOptions.xaxis!"
       [stroke]="areaChartOptions.stroke!" [tooltip]="areaChartOptions.tooltip!"
       [dataLabels]="areaChartOptions.dataLabels!"></apx-chart>
-    </div>
   </div>
 
-  <div class="graph-holder-2">
+  <div class="graph-holder-2  p-4">
     <h4>Balance Overview</h4>
     <apx-chart
     [series]="columnChartOptions.series!"
@@ -22,9 +20,16 @@
     [fill]="columnChartOptions.fill!"
     ></apx-chart>
   </div>
-  <div class="graph-holder-3">
+  <div class="graph-holder-3  p-4">
     <h4>Top Products</h4>
-
+    <apx-chart
+    [series]="donutChartOptions.series!"
+    [chart]="donutChartOptions.chart!"
+    [labels]="donutChartOptions.labels!"
+    [responsive]="donutChartOptions.responsive!"
+    [plotOptions]="donutChartOptions.plotOptions!"
+    [colors]="donutChartOptions.colors!"
+  ></apx-chart>
   </div>
 
 </div>
