--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header-bar d-flex justify-content-between align-items-center">
+<div class="header-bar w-100 d-flex justify-content-between align-items-center">
 
   <div class="d-flex  align-items-center">
     <img src="./assets/icons/search.svg" class="icon search ">
@@ -7,7 +7,7 @@
 
   <div class="right d-flex align-items-center mr-4 h-100 ">
     <div class="caret-item d-flex align-items-center h-100">
-      <p class="language">ENG</p>
+      <p class="language ">ENG</p>
       <img src="./assets/icons/caret.svg" class="icon caret ">
       <img src="./assets/icons/chat.svg" class="icon-small">
       <span class="dot red"></span>
@@ -21,7 +21,7 @@
       <img src="./assets/icons/profile-2.jpg" alt="profile " class="profile">
       <!-- <div class="caret-item d-flex align-items-baseline"> -->
 
-      <p class="user ">Camilie Stevenson</p>
+      <p class="user  ">Camilie Stevenson</p>
       <img src="./assets/icons/caret.svg" class="icon caret ">
       <!-- </div> -->
     </div>
