--- a/src/app/components/top-cards/top-cards.component.scss
+++ b/src/app/components/top-cards/top-cards.component.scss
@@ -3,10 +3,10 @@
 .holder {
   gap: 1rem;
 
-
   .first {
     color: $base-white;
     background-color: $base-blue;
+
     .head-icon {
       filter: invert(1);
       opacity: 0.4;
@@ -18,12 +18,12 @@
 
 
     h2 {
-      color: #506de2
+      color: $base-blue
     }
 
     h3,
     h4 {
-      color: #717586;
+      color: $grey;
     }
 
     .head-icon {
@@ -34,7 +34,7 @@
   .top-card {
     height: 100%;
     flex-basis: 25%;
-    border-radius:4px;
+    border-radius: 4px;
 
 
     .card {
@@ -42,8 +42,8 @@
 
         &-headline {
           font-size: 2.1rem;
-          font-weight: 600;
-        @extend .font-nunito;
+          font-weight: 700;
+          @extend .font-nunito;
 
         }
 
