--- a/src/app/components/dashboard-charts/dashboard-charts.component.scss
+++ b/src/app/components/dashboard-charts/dashboard-charts.component.scss
@@ -18,6 +18,10 @@
 
   .graph-holder-1 {
     flex-basis: 35%;
+
+    p {
+      margin-right: 0.7rem;
+    }
   }
 
   .graph-holder-2 {
@@ -27,6 +31,12 @@
 
   .graph-holder-3 {
     flex-basis: 30%;
+
+    img {
+      width: 1.8rem;
+    }
   }
+
+  @extend %caret;
 
 }
